RESOLVED FIXED301730
Control-click on YouTube video does not show video controls
https://bugs.webkit.org/show_bug.cgi?id=301730
Summary Control-click on YouTube video does not show video controls
Lily Spiniolas
Reported 2025-10-30 17:21:40 PDT
Attachments
Lily Spiniolas
Comment 1 2025-10-30 17:24:14 PDT
EWS
Comment 2 2025-11-03 10:49:17 PST
Committed 302489@main (5336d0544d6b): <https://commits.webkit.org/302489@main> Reviewed commits have been landed. Closing PR #53233 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.